--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -1,12 +1,17 @@
 table {
-    border: 1px solid black;
+    border-top: 1px solid black !important;
+    border-right: 1px solid black !important;
+    border-left: 1px solid black !important;
     background: #FFFFFF;
     font-size: 12px;
+
 }
 
 .outer {
     width: 80% !important;
+    
 }
+
 
 .header {
     padding: 14px;
